feat: Secure API key in settings and fix Android build environment
- Refactor Settings UI to mask API key and show status only
- Resolve Android build issues by using internal JBR
- Update Capacitor dependencies for v7 compatibility
- Restore app icons and splash screens

--- a/src/app/setting/setting.page.html
+++ b/src/app/setting/setting.page.html
@@ -34,14 +34,52 @@
     <ion-list-header>
       <ion-label>API Configuration</ion-label>
     </ion-list-header>
+    
+    <!-- Status Indicator -->
     <ion-item>
       <ion-icon slot="start" name="key-outline" color="warning"></ion-icon>
-      <ion-input type="text" label="TMDB API Key" labelPlacement="stacked" [(ngModel)]="tmdbApiKey" placeholder="Enter Key"></ion-input>
+      <ion-label>
+        <h2>TMDB API Key</h2>
+        <p>
+          <ion-text [color]="isKeyConfigured ? 'success' : 'medium'">
+            <ion-icon [name]="isKeyConfigured ? 'checkmark-circle-outline' : 'warning-outline'" style="vertical-align: middle;"></ion-icon>
+            {{ isKeyConfigured ? 'Configured & Secured' : 'Not Configured' }}
+          </ion-text>
+        </p>
+      </ion-label>
+      <ion-button slot="end" fill="clear" *ngIf="isKeyConfigured" color="danger" (click)="removeApiKey()">
+        Remove
+      </ion-button>
+      <ion-button slot="end" fill="clear" *ngIf="!showKeyInput" (click)="showKeyInput = true">
+        {{ isKeyConfigured ? 'Update' : 'Set Key' }}
+      </ion-button>
+    </ion-item>
+
+    <!-- Secure Input Field (Collapsible) -->
+    <ion-item *ngIf="showKeyInput">
+      <!-- <ion-icon slot="start" name="key-outline" color="medium"></ion-icon> -->
+       <!-- Indent slightly or use no icon to distinguish -->
+      <ion-input 
+        type="password" 
+        label="Enter New Key" 
+        labelPlacement="stacked" 
+        [(ngModel)]="inputApiKey" 
+        placeholder="Past key here..."
+        [clearInput]="true">
+      </ion-input>
       <ion-button slot="end" fill="clear" (click)="pasteApiKey()">Paste</ion-button>
     </ion-item>
-    <ion-item lines="none">
-      <ion-button expand="block" (click)="saveApiKey()" slot="end">Save Key</ion-button>
-      <ion-button *ngIf="showGetNewKey" color="danger" fill="outline" slot="end" (click)="openUrl('https://developer.themoviedb.org/reference/intro/getting-started')">Get Key</ion-button>
+
+    <!-- Action Buttons for Input -->
+    <ion-item lines="none" *ngIf="showKeyInput">
+      <ion-button slot="start" fill="clear" color="medium" (click)="showKeyInput = false; inputApiKey = ''">Cancel</ion-button>
+      <ion-button slot="end" (click)="saveApiKey()" [disabled]="!inputApiKey">Save Key</ion-button>
+    </ion-item>
+    
+    <ion-item lines="none" *ngIf="showGetNewKey || (!isKeyConfigured && !showKeyInput)">
+       <ion-button fill="outline" size="small" slot="start" (click)="openUrl('https://developer.themoviedb.org/reference/intro/getting-started')">
+         Get API Key <ion-icon name="open-outline" slot="end"></ion-icon>
+       </ion-button>
     </ion-item>
   </ion-list>
 
