feat: Backup and restore optimization

--- a/src/app/setting/setting.page.html
+++ b/src/app/setting/setting.page.html
@@ -113,11 +113,11 @@
       <ion-label>Clear Cache</ion-label>
     </ion-item>
     <ion-item button (click)="createBackup()">
-      <ion-icon slot="start" name="cloud-download-outline" color="secondary"></ion-icon>
+      <ion-icon slot="start" name="cloud-download-outline"></ion-icon>
       <ion-label>Backup Data</ion-label>
     </ion-item>
     <ion-item button (click)="restoreBackup()" lines="none">
-      <ion-icon slot="start" name="cloud-upload-outline" color="secondary"></ion-icon>
+      <ion-icon slot="start" name="cloud-upload-outline"></ion-icon>
       <ion-label>Restore Data</ion-label>
     </ion-item>
   </ion-list>
